--- a/package.json
+++ b/package.json
@@ -29,10 +29,13 @@
   "dependencies": {
     "bcryptjs": "^2.4.3",
     "config": "^3.2.5",
+    "crypto-js": "^4.0.0",
     "express": "^4.17.1",
     "express-validator": "^6.4.0",
     "jsonwebtoken": "^8.5.1",
-    "mongoose": "^5.8.11"
+    "mongoose": "^5.8.11",
+    "nodemailer": "^6.4.3",
+    "urlencode": "^1.1.0"
   },
   "devDependencies": {
     "concurrently": "^5.1.0",
