--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
   },
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/dev-vinayak252/TrackMySquad.git"
+    "url": "git+https://github.com/rli46c/TrackMySquad.git"
   },
   "keywords": [
     "track",
@@ -23,9 +23,9 @@
   "author": "Vinayak Sharma",
   "license": "GPL-3.0",
   "bugs": {
-    "url": "https://github.com/dev-vinayak252/TrackMySquad/issues"
+    "url": "https://github.com/rli46c/TrackMySquad/issues"
   },
-  "homepage": "https://github.com/dev-vinayak252/TrackMySquad#readme",
+  "homepage": "https://github.com/rli46c/TrackMySquad#readme",
   "dependencies": {
     "bcryptjs": "^2.4.3",
     "config": "^3.2.5",
