--- a/client/package.json
+++ b/client/package.json
@@ -3,16 +3,17 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
-    "@material-ui/core": "^4.9.2",
+    "@material-ui/core": "^4.9.5",
     "@material-ui/icons": "^4.9.1",
     "@testing-library/jest-dom": "^4.2.4",
-    "@testing-library/react": "^9.4.0",
+    "@testing-library/react": "^9.5.0",
     "@testing-library/user-event": "^7.2.1",
     "axios": "^0.19.2",
     "clsx": "^1.1.0",
-    "notistack": "^0.9.8",
-    "react": "^16.12.0",
-    "react-dom": "^16.12.0",
+    "material-table": "^1.57.2",
+    "notistack": "^0.9.9",
+    "react": "^16.13.0",
+    "react-dom": "^16.13.0",
     "react-redux": "^7.1.3",
     "react-router-dom": "^5.1.2",
     "react-scripts": "^3.4.0",
@@ -20,7 +21,7 @@
     "redux": "^4.0.5",
     "redux-devtools-extension": "^2.13.8",
     "redux-thunk": "^2.3.0",
-    "uuidv4": "^6.0.5"
+    "uuidv4": "^6.0.6"
   },
   "scripts": {
     "start": "react-scripts start",
