--- a/client/package.json
+++ b/client/package.json
@@ -14,6 +14,7 @@
     "notistack": "^0.9.9",
     "react": "^16.13.0",
     "react-dom": "^16.13.0",
+    "react-draggable": "^4.2.0",
     "react-redux": "^7.1.3",
     "react-router-dom": "^5.1.2",
     "react-scripts": "^3.4.0",
